# python-minecraft-clone

./: .gitignore  LICENSE  README.md  lint.py  requirements.txt  ruff.toml
community/: baseinput.py  block_type.py  camera.py  chunk.py  collider.py  controller.py  entity.py  entity_type.py  frag.glsl  gamemain.py  gui.py  hit.py  joystick.py  keyboard_mouse.py  main.py  matrix.py  mob.py  options.py  player.py  render_region.py  requirements.txt  save.py  scene.py  shader.py  start.bat  subchunk.py  util.py  (+3 more)
episode-13/: README.md  block_type.py  build.py  chunk.py  collider.py  entity.py  entity_type.py  main.py  matrix.py  mcpy.py  mob.py  player.py  pyproject.toml  save.py  setup.py  world.py
episode-13/data/: blocks.mcpy  entities.mcpy
episode-13/models/: __init__.py  cactus.py  cow.py  creeper.py  crop.py  cube.py  curry.py  door.py  leaves.py  lever.py  liquid.py  pig.py  pressure_plate.py  sign_post.py  skeleton.py  snow.py  soil.py  spider.py  tinted_glass.py  torch.py  zombie.py
episode-13/shaders/entity/: frag.glsl  vert.glsl
episode-13/src/: save.py  world.py
episode-13/src/chunk/: __init__.py  __init__.pyx  chunk.py  chunk.pyx  common.py  subchunk.py  subchunk.pyx
episode-13/src/entity/: entity.py  player.py
episode-13/src/physics/: collider.py  hit.py
episode-13/src/renderer/: block_type.py  matrix.py  shader.py  texture_manager.py
episode-13/vscode_mcpy_extension/: package.json
episode-13/vscode_mcpy_extension/syntaxes/: mcpy_blocks.tmLanguage.json  mcpy_entities.tmLanguage.json
episode-13/work/: convert.py
episode-13/work/models/: cow.json  creeper.json  curry.json  pig.json  skeleton.json  spider.json  zombie.json
(+196 files in other folders)
