[tool.poetry]
name = "mcpy"
version = "0.13.0"
description = "Minecraft clone written in Python"
authors = [
	"obiwac",
	"Jukitsu",
	"drakeerv",
	"abrha2020-smart",
	"StartForKiller",
	"Chubercik",
	"brennop",
	"anthony-63",
]
readme = "README.md"
build="setup.py"

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^2.0.16"
nbtlib = "^2.0.4"
base36 = "^0.1.1"
pyglm = "^2.7.1"
cython = "^3.0.10"

[tool.poetry.group.dev.dependencies]
tan = "^23.7.0"
ruff = "^0.5.5"

[tool.pyright]
exclude = [".venv"]
venvPath = "."
venv = ".venv"
